# Yak

./: .gitignore  CMakeLists.txt  README.md  game.cpp  game.hpp  main.cpp  window.cpp
include/: alias.hpp  audio.hpp  editor.hpp  game.hpp  graphics.hpp  input.hpp  window.hpp
src/: audio.cpp  game.cpp  graphics.cpp  input.cpp  window.cpp
src/editor/: editor.cpp
